# 3sem_cpp-practice

./: .gitignore  README.md
projects/00_ShishGL/: .ShishGL_log  .gitignore  CMakeLists.txt  Makefile  TODO
projects/00_ShishGL/apps/: CMakeLists.txt
projects/00_ShishGL/apps/YAGE/: CMakeLists.txt
projects/00_ShishGL/apps/YAGE/src/: CMakeLists.txt  Canvas.cpp  YAGE.cpp  main.cpp
projects/00_ShishGL/assets/: LayoutDump.dot  ShishGL_log  Subscriptions.dot  layout.dot  subs.dot
projects/00_ShishGL/assets/text/: TEST_TEXT.txt
projects/00_ShishGL/docs/: .gitignore  CMakeLists.txt  deps.dot  deps.dot.ShishGL  deps.dot.ShishGL-Core  deps.dot.ShishGL-Core.dependers  deps.dot.ShishGL-DebugUtilities  deps.dot.ShishGL-DebugUtilities.dependers  deps.dot.ShishGL-EventManager  deps.dot.ShishGL-EventManager.dependers  deps.dot.ShishGL-EventSystem  deps.dot.ShishGL-EventSystem.dependers  deps.dot.ShishGL-GUI  deps.dot.ShishGL-GUI.dependers  deps.dot.ShishGL-Graphics  deps.dot.ShishGL-Graphics.dependers  deps.dot.ShishGL-GraphicsPlatform  deps.dot.ShishGL-GraphicsPlatform.dependers  deps.dot.ShishGL-LogSystem  deps.dot.ShishGL-LogSystem.dependers  deps.dot.ShishGL-ObjectManager  deps.dot.ShishGL-ObjectManager.dependers  deps.dot.ShishGL-Platform  deps.dot.ShishGL-Platform.dependers  deps.dot.ShishGL-PlatformEvents  deps.dot.ShishGL-PlatformEvents.dependers  deps.dot.ShishGL-PlatformInput  deps.dot.ShishGL-PlatformInput.dependers  deps.dot.ShishGL-PlatformInterface  deps.dot.ShishGL-PlatformInterface.dependers  deps.dot.ShishGL-Primitives  deps.dot.ShishGL-Primitives.dependers  deps.dot.ShishGL-RenderSystem  deps.dot.ShishGL-RenderSystem.dependers  deps.dot.ShishGL-ResourceManager  deps.dot.ShishGL-ResourceManager.dependers  deps.dot.ShishGL-SfmlPlatform  deps.dot.ShishGL-SfmlPlatform.dependers  deps.dot.ShishGL-Shapes  deps.dot.ShishGL-Shapes.dependers  (+21 more)
projects/00_ShishGL/include/: ShishGL.hpp  application.hpp  engine.hpp  event.hpp  event_system.hpp  log.hpp  object.hpp  window.hpp  window_container.hpp
projects/00_ShishGL/include/ShishGL/: ShishGL.hpp  application.hpp  engine.hpp  log.hpp  object.hpp  window.hpp
projects/00_ShishGL/include/ShishGL/Core/: CoreApplication.hpp  GraphicObject.hpp
projects/00_ShishGL/include/ShishGL/DebugUtilities/: CursorLocator.hpp
projects/00_ShishGL/include/ShishGL/GUI/: ShapedWindow.hpp  UIScrollbar.hpp
projects/00_ShishGL/include/ShishGL/Graphics/: ColorCollection.hpp  WindowTypes.hpp  window.hpp
projects/00_ShishGL/include/ShishGL/ables/: scrollable.hpp
projects/00_ShishGL/include/ShishGL/abstracts/: scrollable.hpp  shaped_button.hpp  shaped_float.hpp  shaped_holdable_button.hpp  shaped_slider.hpp  shaped_window.hpp
projects/00_ShishGL/include/ShishGL/core/: core_application.hpp  engine.hpp  event.hpp  event_system.hpp  log.hpp  object.hpp  subscription_manager.hpp  window.hpp  window_container.hpp
projects/00_ShishGL/include/ShishGL/event/: event.hpp  event_buffer.hpp  event_system.hpp
projects/00_ShishGL/include/ShishGL/geometry/: vector2.hpp
projects/00_ShishGL/include/ShishGL/graphics/: color_collection.hpp
projects/00_ShishGL/include/ShishGL/shapes/: rectangle.hpp  shape2d.hpp
projects/00_ShishGL/include/ShishGL/utility/: color.hpp  color_collection.hpp  input.hpp
projects/00_ShishGL/include/ShishGL/window/: rect_window.hpp  shaped_button.hpp  shaped_container.hpp  shaped_float.hpp  shaped_slider.hpp  shaped_window.hpp  window.hpp  window_container.hpp
projects/00_ShishGL/include/drafts/: button.hpp  draw.hpp  engine_interface.hpp  window_container.hpp  window_manager.hpp
projects/00_ShishGL/include/drafts/dialog_window/: dialog_window.hpp
projects/00_ShishGL/include/engines/GLUT/: graphic_engine.hpp  window_engine.hpp
projects/00_ShishGL/include/engines/glut/: graphic_engine.hpp  window_engine.hpp
projects/00_ShishGL/include/test/: dummy_button.hpp
projects/00_ShishGL/src/: CMakeLists.txt  application.cpp  event_system.cpp  log.cpp  test.cpp  window.cpp  window_manager.cpp
projects/00_ShishGL/src/Core/: CMakeLists.txt  CoreApplication.cpp  GraphicObject.cpp
projects/00_ShishGL/src/Core/Event/: CMakeLists.txt  Event.cpp  EventSystem.cpp  SubscriptionManager.cpp  TimerEvent.cpp
projects/00_ShishGL/src/Core/EventSystem/: CMakeLists.txt  Event.cpp  EventSystem.cpp  Listener.cpp  SubscriptionManager.cpp
projects/00_ShishGL/src/Core/Log/: CMakeLists.txt  Log.cpp
projects/00_ShishGL/src/Core/LogSystem/: LogSystem.cpp
projects/00_ShishGL/src/Core/Object/: CMakeLists.txt  GraphicObject.cpp  Object.cpp  ObjectManager.cpp
projects/00_ShishGL/src/Core/ObjectManager/: CMakeLists.txt  Object.cpp  ObjectManager.cpp
projects/00_ShishGL/src/Core/Platform/: CMakeLists.txt
projects/00_ShishGL/src/Core/Primitives/: CMakeLists.txt  Shape2D.cpp  Text.cpp
projects/00_ShishGL/src/Core/RenderSystem/: CMakeLists.txt  GraphicObject.cpp  Image.cpp  LayoutManager.cpp  RenderSystem.cpp
projects/00_ShishGL/src/Core/ResourceManager/: ResourceManager.cpp
projects/00_ShishGL/src/Core/System/: CMakeLists.txt  System.cpp
projects/00_ShishGL/src/Core/Window/: CMakeLists.txt  Viewport.cpp  Window.cpp  WindowManager.cpp
projects/00_ShishGL/src/DebugUtilities/: CMakeLists.txt  CursorLocator.cpp
projects/00_ShishGL/src/GUI/: CMakeLists.txt  UIScrollbar.cpp
projects/00_ShishGL/src/GUI/Abstracts/: CMakeLists.txt  ClickableWindow.cpp  (+2 more)
projects/00_ShishGL/src/Graphics/: CMakeLists.txt
projects/00_ShishGL/src/Shapes/: CMakeLists.txt  Rectangle.cpp  Shape2D.cpp
projects/00_ShishGL/src/ShishGL/: application.cpp
projects/00_ShishGL/src/draft/: draw.cpp  window.cpp  window_container.cpp
projects/00_ShishGL/src/drafts/: window_container.cpp  window_manager.cpp
projects/00_ShishGL/src/event/: event_buffer.cpp  event_system.cpp
projects/00_ShishGL/src/geometry/: vector2.cpp
projects/00_ShishGL/src/log/: log.cpp
projects/00_ShishGL/src/text/: text.cpp
projects/00_ShishGL/src/window/: window.cpp  window_container.cpp
projects/00_ShishGL/test/: CMakeLists.txt  Sandbox.cpp  TestAbstracts.cpp  test.cpp
(+423 files in other folders)
